--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>BNS Emails</title>
 </head>
 <body>
-    <a href="/welcome.html">Welcome</a> 
+    <a href="welcome.html">Welcome</a> 
     <br><br>
-    <a href="/hello-again.html">Hello Again</a>
+    <a href="hello-again.html">Hello Again</a>
 </body>
 </html>
