--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <title>BNS Emails</title>
 </head>
 <body>
-    <a href="welcome.html">Welcome</a> 
-    <br><br>
-    <a href="hello-again.html">Hello Again</a>
+    <a href="welcome.html">Booking Confirmation Freelance</a> 
+    <a href="welcome.html">Booking Confirmation Fulltime NY</a> 
+    <a href="welcome.html">Booking Confirmation Fulltime LA</a> 
+    <a href="welcome.html">Onboarding Confirmation Freelance</a> 
+    <a href="hello-again.html">Onboarding Fulltime</a>
 </body>
 </html>
