--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>BNS Emails</title>
 </head>
 <body>
-    <a href="welcome.html">Booking Confirmation Freelance</a> 
-    <a href="welcome.html">Booking Confirmation Fulltime NY</a> 
-    <a href="welcome.html">Booking Confirmation Fulltime LA</a> 
-    <a href="welcome.html">Onboarding Confirmation Freelance</a> 
-    <a href="hello-again.html">Onboarding Fulltime</a>
+    <a href="welcome.html">Booking Confirmation Freelance</a> <br>
+    <a href="welcome.html">Booking Confirmation Fulltime NY</a> <br>
+    <a href="welcome.html">Booking Confirmation Fulltime LA</a> <br>
+    <a href="welcome.html">Onboarding Confirmation Freelance</a> <br>
+    <a href="hello-again.html">Onboarding Fulltime</a> <br>
 </body>
 </html>
