--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <title>BNS Emails</title>
 </head>
 <body>
-    <a href="welcome.html">Booking Confirmation Freelance</a> <br>
-    <a href="welcome.html">Booking Confirmation Fulltime NY</a> <br>
-    <a href="welcome.html">Booking Confirmation Fulltime LA</a> <br>
-    <a href="welcome.html">Onboarding Confirmation Freelance</a> <br>
-    <a href="hello-again.html">Onboarding Fulltime</a> <br>
+    <a href="tester.html">Test Emails</a> <br>
+    <a href="welcome.html">Booking Confirmation Freelance</a> - Test <br>
+    <a href="welcome.html">Booking Confirmation Fulltime NY</a> - Test <br>
+    <a href="welcome.html">Booking Confirmation Fulltime LA</a> - Test <br>
+    <a href="onboarding-confirmation-freelance.html">Onboarding Confirmation Freelance</a> - Good <br>
+    <a href="hello-again.html">Onboarding Fulltime</a> - Test <br>
 </body>
 </html>
