--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>BNS Emails</title>
 </head>
 <body>
-    <a href="tester.html">Test Emails</a><br>
-    <a href="welcome.html">Booking Confirmation Freelance</a> <br>
-    <a href="welcome.html">Booking Confirmation Fulltime NY</a> <br>
-    <a href="welcome.html">Booking Confirmation Fulltime LA</a><br>
-    <a href="onboarding-confirmation-freelance.html">Onboarding Confirmation Freelance - Imported</a><br>
-    <a href="hello-again.html">Onboarding Fulltime</a> <br>
+    <!-- <a href="tester.html">Test Emails</a><br> -->
+    <a href="booking-confirmation-freelancer.html">Booking Confirmation Freelance</a> <br>
+    <a href="booking-confirmation-fulltime-ny.html">Booking Confirmation Fulltime NY</a> <br>
+    <a href="booking-confirmation-fulltime-la.html">Booking Confirmation Fulltime LA</a><br>
+    <a href="onboarding-confirmation-freelance.html">Onboarding Confirmation Freelance</a><br>
+    <a href="onboarding-fulltime.html">Onboarding Fulltime</a> <br>
 </body>
 </html>
