--- a/booking-confirmation-fulltime-la.html
+++ b/booking-confirmation-fulltime-la.html
@@ -577,6 +577,305 @@
           </tbody>
         </table>
       </div>
+
+      <!-- Lucid Links -->
+      <!--[if mso | IE]></td></tr></table><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:600px;" width="600" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+      <div style="margin: 0px auto; max-width: 600px">
+        <table
+          align="center"
+          border="0"
+          cellpadding="0"
+          cellspacing="0"
+          role="presentation"
+          style="width: 100%"
+        >
+          <tbody>
+            <tr>
+              <td
+                style="
+                  direction: ltr;
+                  font-size: 0px;
+                  padding: 0 32px;
+                  padding-top: 50px;
+                  text-align: center;
+                "
+              >
+                <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="width:536px;" ><![endif]-->
+                <div
+                  class="mj-column-per-100 mj-outlook-group-fix"
+                  style="
+                    font-size: 0;
+                    line-height: 0;
+                    text-align: left;
+                    display: inline-block;
+                    width: 100%;
+                    direction: ltr;
+                  "
+                >
+                  <!--[if mso | IE]><table border="0" cellpadding="0" cellspacing="0" role="presentation" ><tr><td style="vertical-align:top;width:456px;" ><![endif]-->
+                  <div
+                    class="mj-column-px-456 mj-outlook-group-fix"
+                    style="
+                      font-size: 0px;
+                      text-align: left;
+                      direction: ltr;
+                      display: inline-block;
+                      vertical-align: top;
+                      width: 85.07462686567165%;
+                    "
+                  >
+                    <table
+                      border="0"
+                      cellpadding="0"
+                      cellspacing="0"
+                      role="presentation"
+                      width="100%"
+                    >
+                      <tbody>
+                        <tr>
+                          <td style="vertical-align: top; padding-bottom: 8px">
+                            <table
+                              border="0"
+                              cellpadding="0"
+                              cellspacing="0"
+                              role="presentation"
+                              style=""
+                              width="100%"
+                            >
+                              <tbody>
+                                <tr>
+                                  <td
+                                    align="left"
+                                    style="
+                                      font-size: 0px;
+                                      padding: 0;
+                                      word-break: break-word;
+                                    "
+                                  >
+                                    <div
+                                      style="
+                                        font-family: Neue Haas Grotesk Display
+                                            Pro,
+                                          Helvetica Neue, Helvetica, Arial,
+                                          sans-serif;
+                                        font-size: 44px;
+                                        font-weight: 500;
+                                        line-height: 1;
+                                        text-align: left;
+                                        color: #fe5000;
+                                      "
+                                    >
+                                      Lucid Link
+                                    </div>
+                                  </td>
+                                </tr>
+                              </tbody>
+                            </table>
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
+                  <!--[if mso | IE]></td><td style="vertical-align:top;width:80px;" ><![endif]-->
+                  <div
+                    class="mj-column-px-80 mj-outlook-group-fix"
+                    style="
+                      font-size: 0px;
+                      text-align: left;
+                      direction: ltr;
+                      display: inline-block;
+                      vertical-align: top;
+                      width: 14.925373134328357%;
+                    "
+                  >
+                    <table
+                      border="0"
+                      cellpadding="0"
+                      cellspacing="0"
+                      role="presentation"
+                      style="vertical-align: top"
+                      width="100%"
+                    >
+                      <tbody>
+                        <tr>
+                          <td
+                            align="right"
+                            style="
+                              font-size: 0px;
+                              padding: 0;
+                              word-break: break-word;
+                            "
+                          >
+                            <table
+                              border="0"
+                              cellpadding="0"
+                              cellspacing="0"
+                              role="presentation"
+                              style="
+                                border-collapse: collapse;
+                                border-spacing: 0px;
+                              "
+                            >
+                              <tbody>
+                                <tr>
+                                  <td style="width: 48px">
+                                    <img
+                                      src="https://onboarding.brandnewschool.com/email/icon-pens.png"
+                                      style="
+                                        border: 0;
+                                        display: block;
+                                        outline: none;
+                                        text-decoration: none;
+                                        height: 48px;
+                                        width: 100%;
+                                        font-size: 13px;
+                                      "
+                                      width="48"
+                                      height="48"
+                                    />
+                                  </td>
+                                </tr>
+                              </tbody>
+                            </table>
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
+                  <!--[if mso | IE]></td></tr></table><![endif]-->
+                </div>
+                <!--[if mso | IE]></td><td class="" style="vertical-align:top;width:536px;" ><![endif]-->
+                <div
+                  class="mj-column-px-536 mj-outlook-group-fix"
+                  style="
+                    font-size: 0px;
+                    text-align: left;
+                    direction: ltr;
+                    display: inline-block;
+                    vertical-align: top;
+                    width: 100%;
+                  "
+                >
+                  <table
+                    border="0"
+                    cellpadding="0"
+                    cellspacing="0"
+                    role="presentation"
+                    style="vertical-align: top"
+                    width="100%"
+                  >
+                    <tbody>
+                      <tr>
+                        <td
+                          align="left"
+                          style="
+                            font-size: 0px;
+                            padding: 0;
+                            word-break: break-word;
+                          "
+                        >
+                          <table
+                            cellpadding="0"
+                            cellspacing="0"
+                            width="100%"
+                            border="0"
+                            style="
+                              color: #000000;
+                              font-family: Neue Haas Grotesk Display Pro,
+                                Helvetica Neue, Helvetica, Arial, sans-serif;
+                              font-size: 16px;
+                              line-height: 1.5;
+                              table-layout: auto;
+                              width: 100%;
+                              border: none;
+                            "
+                          >
+                            <tr style="border-top: 1px solid #fe5000">
+                              <td
+                                width="135px"
+                                style="
+                                  color: #fe5000;
+                                  padding: 12px 0;
+                                  vertical-align: top;
+                                "
+                              >
+                                Username
+                              </td>
+                              <td style="padding: 12px 40px 32px 0">
+                                {{199544635__bnsEmail}}
+                              </td>
+                            </tr>
+                            <tr style="border-top: 1px solid #fe5000">
+                              <td
+                                style="
+                                  color: #fe5000;
+                                  padding: 12px 0;
+                                  vertical-align: top;
+                                "
+                              >
+                                Password
+                              </td>
+                              <td style="padding: 12px 40px 32px 0">
+                                Bns12345!
+                              </td>
+                            </tr>
+                            <tr style="border-top: 1px solid #fe5000">
+                              <td
+                                style="
+                                  color: #fe5000;
+                                  padding: 12px 0;
+                                  vertical-align: top;
+                                "
+                              >
+                                Instructions
+                              </td>
+                              <td style="padding: 12px 40px 32px 0">
+                                <a
+                                  href="https://www.lucidlink.com/download"
+                                  style="color: #000 !important"
+                                  target="_blank"
+                                  >Download Lucid Link</a
+                                >
+                                <img
+                                  style="
+                                    width: 12px;
+                                    height: 12px;
+                                    margin-left: 4px;
+                                  "
+                                  src="https://onboarding.brandnewschool.com/email/icon-arrow-angle.png"
+                                />
+                                <br />
+                                <a
+                                  href="https://www.notion.so/brandnewschool/LucidLink-9b539e6d997d4f2aafcc512ce4775a84"
+                                  style="color: #000 !important"
+                                  target="_blank"
+                                  >How To Use Lucid Link</a
+                                >
+                                <img
+                                  style="
+                                    width: 12px;
+                                    height: 12px;
+                                    margin-left: 4px;
+                                  "
+                                  src="https://onboarding.brandnewschool.com/email/icon-arrow-angle.png"
+                                />
+                              </td>
+                            </tr>
+                          </table>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+                <!--[if mso | IE]></td></tr></table><![endif]-->
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+
+      <!--Close Lucid Links -->
+
       <!--[if mso | IE]></td></tr></table><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:600px;" width="600" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
       <div style="margin: 0px auto; max-width: 600px">
         <table
