--- a/booking-confirmation-freelancer.html
+++ b/booking-confirmation-freelancer.html
@@ -283,15 +283,9 @@
                               color: #000000;
                             "
                           >
-                            We look forward to collaborating with you. Select
-                            the button below to email & confirm receipt of your
-                            Booking Confirmation.
-                            <br /><br />
-                            Then, follow the instructions below to activate your
-                            Brand New School Google account. After doing so, the
-                            first email you receive in your BNS Gmail account
-                            will provide instructions to access all important
-                            applications, documentation and instructions.
+                          We’re excited to collaborate with you! Please click the button below to confirm your Booking Confirmation.
+                          <br><br>
+                          Next, follow the steps to activate your BNS Google Workspace account. Once activated, your first email will contain instructions to access all key apps, documents, and further details.
                           </div>
                         </td>
                       </tr>
@@ -605,21 +599,8 @@
                                 {{199544634__project[]label}}
                               </td>
                             </tr>
-                            <tr style="border-top: 1px solid #fe5000">
-                              <td
-                                style="
-                                  color: #fe5000;
-                                  padding: 12px 0;
-                                  vertical-align: top;
-                                "
-                              >
-                                Booking Dates
-                              </td>
-                              <td style="padding: 12px 40px 32px 0">
-                                {{199544634__startDate}} to
-                                {{199544634__endDate}}
-                              </td>
-                            </tr>
+
+                            
                             <tr style="border-top: 1px solid #fe5000">
                               <td
                                 style="
@@ -632,6 +613,21 @@
                               </td>
                               <td style="padding: 12px 40px 32px 0">
                                 {{199544634__poNumber}}
+                              </td>
+                            </tr>
+                            <tr style="border-top: 1px solid #fe5000"></tr>
+                              <td
+                                style="
+                                  color: #fe5000;
+                                  padding: 12px 0;
+                                  vertical-align: top;
+                                "
+                              >
+                                Booking Dates
+                              </td>
+                              <td style="padding: 12px 40px 32px 0">
+                                {{199544634__startDate}} to
+                                {{199544634__endDate}}
                               </td>
                             </tr>
                             <tr style="border-top: 1px solid #fe5000">
@@ -1388,7 +1384,7 @@
                                 "
                               >
                                 <span
-                                  >If you log your hours in Bamboo,&nbsp;</span
+                                  >If you are on payroll and and not incorporated (no S corp or Inc) please&nbsp;</span
                                 >
                                 <a
                                   href="https://www.notion.so/brandnewschool/BambooHR-Timekeeping-2d79b036fb5141f0b6063ff8811f4230"
@@ -1397,7 +1393,11 @@
                                     text-decoration: underline;
                                     text-underline-offset: 0.25em;
                                   "
-                                  >follow these instructions.</a
+                                  target="_blank"
+                                  >follow these instructions</a
+                                >
+                                <span
+                                  >&nbsp;for logging hours in BambooHR</span
                                 >
                               </td>
                             </tr>
