--- a/booking-confirmation-fulltime-la.html
+++ b/booking-confirmation-fulltime-la.html
@@ -284,10 +284,13 @@
                               color: #000000;
                             "
                           >
-                            My name is Amanda and I am the Sr. HR Generalist at
-                            BNS. <br />It is nice to e-meet you! <br /><br />
-                            We are all looking forward to your first day on
-                            {{201568976__startDate}} at 10:00 AM.
+                            My name is Amanda, and I’m part of the HR team here
+                            at Brand New School. <br />
+                            It’s great to e-meet you!
+                            <br /><br />
+                            We’re all excited for your first day, which is
+                            coming up on {{201568976__startDate}} at 10:00 AM.
+                            Looking forward to seeing you then!
                           </div>
                         </td>
                       </tr>
@@ -1362,14 +1365,15 @@
                                 "
                               >
                                 Morning <br />
-                                Assembly Meeting
+                                Assembly
                               </td>
                               <td style="padding: 12px 40px 32px 0">
                                 We have a Monday morning assembly meeting that
-                                we’d like you to join. You should have received
-                                the calendar invite for that, but just in case
-                                the meeting room details are above for your
-                                reference. <br /><br />
+                                we’d like you to attend. Check your calendar
+                                invite for details, or use the call information
+                                below.
+
+                                <br /><br />
                                 Monday 10:00 – 10:25 AM<br />
                                 <a style="color: #000 !important" href="">
                                   Video Call Link
@@ -1423,6 +1427,8 @@
                               >
                                 1100 S. La Brea Ave. <br />
                                 Los Angeles, CA 90019
+                                <br><br>
+                                Please try to find street parking before before attempting to park in the office lot.
                               </td>
                             </tr>
                           </table>
