--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- <a href="tester.html">Test Emails</a><br> -->
     <a href="booking-confirmation-freelancer.html">Booking Confirmation Freelance - Done</a> <br>
     <a href="booking-confirmation-fulltime-ny.html">Booking Confirmation Fulltime NY - Done</a> <br>
-    <a href="booking-confirmation-fulltime-la.html">Booking Confirmation Fulltime LA</a><br>
+    <a href="booking-confirmation-fulltime-la.html">Booking Confirmation Fulltime LA - Done</a><br>
     <a href="onboarding-confirmation-freelance.html">Onboarding Confirmation Freelance</a><br>
     <a href="onboarding-fulltime.html">Onboarding Fulltime</a> <br>
 </body>
