Onboarding freelance updates

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <a href="booking-confirmation-freelancer.html">Booking Confirmation Freelance - Done</a> <br>
     <a href="booking-confirmation-fulltime-ny.html">Booking Confirmation Fulltime NY - Done</a> <br>
     <a href="booking-confirmation-fulltime-la.html">Booking Confirmation Fulltime LA - Done</a><br>
-    <a href="onboarding-confirmation-freelance.html">Onboarding Confirmation Freelance</a><br>
+    <a href="onboarding-confirmation-freelance.html">Onboarding Confirmation Freelance - Done</a><br>
     <a href="onboarding-fulltime.html">Onboarding Fulltime</a> <br>
 </body>
 </html>
