--- a/onboarding-confirmation-freelance.html
+++ b/onboarding-confirmation-freelance.html
@@ -1507,7 +1507,7 @@
                                 <a
                                   style="color: #000 !important"
                                   href="https://www.notion.so/Teradici-593c556a56cc4095ac1488587048b59b?pvs=21"
-                                  >Teradici instructions</a
+                                  >Teradici & Leostream instructions</a
                                 >
                                 <img
                                   style="
@@ -1618,7 +1618,7 @@
                                         color: #fe5000;
                                       "
                                     >
-                                      BNS Technology Team
+                                      Tech Help
                                     </div>
                                   </td>
                                 </tr>
@@ -1752,95 +1752,16 @@
                                   vertical-align: top;
                                 "
                               >
-                                IT Director
+                                IT Department
                               </td>
                               <td style="padding: 12px 40px 32px 0">
-                                Lawrence Andaya<br />
+                                If you have any trouble, email the IT team. 
+                                  <br />
                                 <a
                                   style="color: #000 !important"
-                                  href="mailto:lawrence@brandnewschool.com"
-                                  >lawrence@brandnewschool.com</a
-                                >
-                                <img
-                                  style="
-                                    width: 12px;
-                                    height: 12px;
-                                    margin: 0 4px;
-                                  "
-                                  src="https://onboarding.brandnewschool.com/email/icon-arrow-angle.png"
-                                />
-                              </td>
-                            </tr>
-                            <tr style="border-top: 1px solid #fe5000">
-                              <td
-                                style="
-                                  color: #fe5000;
-                                  padding: 12px 0;
-                                  vertical-align: top;
-                                "
-                              >
-                                IT Manager
-                              </td>
-                              <td style="padding: 12px 0; vertical-align: top">
-                                Brian Holmes<br />
-                                <a
-                                  style="color: #000 !important"
-                                  href="mailto:brian@brandnewschool.com"
-                                  >brian@brandnewschool.com</a
-                                >
-                                <img
-                                  style="
-                                    width: 12px;
-                                    height: 12px;
-                                    margin: 0 4px;
-                                  "
-                                  src="https://onboarding.brandnewschool.com/email/icon-arrow-angle.png"
-                                />
-                              </td>
-                            </tr>
-                            <tr style="border-top: 1px solid #fe5000">
-                              <td
-                                style="
-                                  color: #fe5000;
-                                  padding: 12px 0;
-                                  vertical-align: top;
-                                "
-                              >
-                                Systems Admin
-                              </td>
-                              <td style="padding: 12px 0; vertical-align: top">
-                                Kenny Ramdwar<br />
-                                <a
-                                  style="color: #000 !important"
-                                  href="mailto:kenny@brandnewschool.com"
-                                  >kenny@brandnewschool.com</a
-                                >
-                                <img
-                                  style="
-                                    width: 12px;
-                                    height: 12px;
-                                    margin: 0 4px;
-                                  "
-                                  src="https://onboarding.brandnewschool.com/email/icon-arrow-angle.png"
-                                />
-                              </td>
-                            </tr>
-                            <tr style="border-top: 1px solid #fe5000">
-                              <td
-                                style="
-                                  color: #fe5000;
-                                  padding: 12px 0;
-                                  vertical-align: top;
-                                "
-                              >
-                                Jr. Systems Admin
-                              </td>
-                              <td style="padding: 12px 0; vertical-align: top">
-                                Michael Winslow<br />
-                                <a
-                                  style="color: #000 !important"
-                                  href="mailto:mike@brandnewschool.com"
-                                  >mike@brandnewschool.com</a
+                                  href="mailto:IT@brandnewschool.com"
+                                  target="_blank"
+                                  >IT@brandnewschool.com</a
                                 >
                                 <img
                                   style="
