--- a/onboarding-fulltime.html
+++ b/onboarding-fulltime.html
@@ -129,61 +129,62 @@
 <body style="word-spacing:normal;">
   <div style="">
     <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:600px;" width="600" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
-    <div style="margin:0px auto;max-width:600px;">
-      <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%;">
-        <tbody>
-          <tr>
-            <td style="direction:ltr;font-size:0px;padding:0 32px;text-align:center;">
-              <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:536px;" ><![endif]-->
-              <div class="mj-column-px-536 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;">
-                <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="vertical-align:top;" width="100%">
-                  <tbody>
-                    <tr>
-                      <td align="left" style="font-size:0px;padding:0;padding-top:32px;padding-bottom:24px;word-break:break-word;">
-                        <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse:collapse;border-spacing:0px;">
-                          <tbody>
-                            <tr>
-                              <td style="width:48px;">
-                                <img src="https://onboarding.brandnewschool.com/email/logo-header.png" style="border:0;display:block;outline:none;text-decoration:none;height:48px;width:100%;font-size:13px;" width="48" height="48" />
-                              </td>
-                            </tr>
-                          </tbody>
-                        </table>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td align="left" style="font-size:0px;padding:0;word-break:break-word;">
-                        <div style="font-family:Neue Haas Grotesk Display Pro, Helvetica Neue, Helvetica, Arial, sans-serif;font-size:44px;font-weight:500;line-height:1;text-align:left;color:#FE5000;">Hello</div>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td align="left" style="font-size:0px;padding:0;word-break:break-word;">
-                        <div style="font-family:Neue Haas Grotesk Display Pro, Helvetica Neue, Helvetica, Arial, sans-serif;font-size:44px;font-weight:500;line-height:1;text-align:left;color:#000000;">{{201568976__firstName}} {{201568976__lastName}}</div>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td align="left" style="font-size:0px;padding:0;padding-top:32px;word-break:break-word;">
-                        <div style="font-family:Neue Haas Grotesk Display Pro, Helvetica Neue, Helvetica, Arial, sans-serif;font-size:16px;line-height:1.5;text-align:left;color:#000000;">We are excited to have you join the BNS team! As you get settled, I wanted to provide you with some documents that will be helpful for you during your time at BNS.</div>
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
-              <!--[if mso | IE]></td></tr></table><![endif]-->
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
+      <div style="margin:0px auto;max-width:600px;">
+        <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%;">
+          <tbody>
+            <tr>
+              <td style="direction:ltr;font-size:0px;padding:0 32px;text-align:center;">
+                <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:536px;" ><![endif]-->
+                <div class="mj-column-px-536 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;">
+                  <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="vertical-align:top;" width="100%">
+                    <tbody>
+                      <tr>
+                        <td align="left" style="font-size:0px;padding:0;padding-top:32px;padding-bottom:24px;word-break:break-word;">
+                          <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse:collapse;border-spacing:0px;">
+                            <tbody>
+                              <tr>
+                                <td style="width:48px;">
+                                  <img src="https://onboarding.brandnewschool.com/email/logo-header.png" style="border:0;display:block;outline:none;text-decoration:none;height:48px;width:100%;font-size:13px;" width="48" height="48" />
+                                </td>
+                              </tr>
+                            </tbody>
+                          </table>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td align="left" style="font-size:0px;padding:0;word-break:break-word;">
+                          <div style="font-family:Neue Haas Grotesk Display Pro, Helvetica Neue, Helvetica, Arial, sans-serif;font-size:44px;font-weight:500;line-height:1;text-align:left;color:#FE5000;">Hello</div>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td align="left" style="font-size:0px;padding:0;word-break:break-word;">
+                          <div style="font-family:Neue Haas Grotesk Display Pro, Helvetica Neue, Helvetica, Arial, sans-serif;font-size:44px;font-weight:500;line-height:1;text-align:left;color:#000000;">{{201568976__firstName}} {{201568976__lastName}}</div>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td align="left" style="font-size:0px;padding:0;padding-top:32px;word-break:break-word;">
+                          <div style="font-family:Neue Haas Grotesk Display Pro, Helvetica Neue, Helvetica, Arial, sans-serif;font-size:16px;line-height:1.5;text-align:left;color:#000000;">We are excited to have you join the BNS team! As you get settled, I wanted to provide you with some documents that will be helpful for you during your time at BNS.</div>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+                <!--[if mso | IE]></td></tr></table><![endif]-->
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     <!--[if mso | IE]></td></tr></table><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:600px;" width="600" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
-    <div style="margin:0px auto;max-width:600px;">
+    <!--
+      <div style="margin:0px auto;max-width:600px;">
       <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%;">
         <tbody>
           <tr>
             <td style="direction:ltr;font-size:0px;padding:0 32px;padding-top:64px;text-align:center;">
-              <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="width:536px;" ><![endif]-->
+              <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="width:536px;" ><![endif]--><!--
               <div class="mj-column-per-100 mj-outlook-group-fix" style="font-size:0;line-height:0;text-align:left;display:inline-block;width:100%;direction:ltr;">
-                <!--[if mso | IE]><table border="0" cellpadding="0" cellspacing="0" role="presentation" ><tr><td style="vertical-align:top;width:456px;" ><![endif]-->
+                <!--[if mso | IE]><table border="0" cellpadding="0" cellspacing="0" role="presentation" ><tr><td style="vertical-align:top;width:456px;" ><![endif]--><!--
                 <div class="mj-column-px-456 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:85.07462686567165%;">
                   <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
                     <tbody>
@@ -203,7 +204,7 @@
                     </tbody>
                   </table>
                 </div>
-                <!--[if mso | IE]></td><td style="vertical-align:top;width:80px;" ><![endif]-->
+                <!--[if mso | IE]></td><td style="vertical-align:top;width:80px;" ><![endif]--><!--
                 <div class="mj-column-px-80 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:14.925373134328357%;">
                   <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="vertical-align:top;" width="100%">
                     <tbody>
@@ -223,9 +224,9 @@
                     </tbody>
                   </table>
                 </div>
-                <!--[if mso | IE]></td></tr></table><![endif]-->
+                <!--[if mso | IE]></td></tr></table><![endif]--><!--
               </div>
-              <!--[if mso | IE]></td><td class="" style="vertical-align:top;width:536px;" ><![endif]-->
+              <!--[if mso | IE]></td><td class="" style="vertical-align:top;width:536px;" ><![endif]--><!--
               <div class="mj-column-px-536 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;">
                 <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="vertical-align:top;" width="100%">
                   <tbody>
@@ -251,12 +252,12 @@
                   </tbody>
                 </table>
               </div>
-              <!--[if mso | IE]></td></tr></table><![endif]-->
+              <!--[if mso | IE]></td></tr></table><![endif]--><!--
             </td>
           </tr>
         </tbody>
       </table>
-    </div>
+    </div> -->
     <!--[if mso | IE]></td></tr></table><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:600px;" width="600" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
     <div style="margin:0px auto;max-width:600px;">
       <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%;">
@@ -266,7 +267,7 @@
               <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="width:536px;" ><![endif]-->
               <div class="mj-column-per-100 mj-outlook-group-fix" style="font-size:0;line-height:0;text-align:left;display:inline-block;width:100%;direction:ltr;">
                 <!--[if mso | IE]><table border="0" cellpadding="0" cellspacing="0" role="presentation" ><tr><td style="vertical-align:top;width:456px;" ><![endif]-->
-                <div class="mj-column-px-456 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:85.07462686567165%;">
+                <!-- <div class="mj-column-px-456 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:85.07462686567165%;">
                   <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
                     <tbody>
                       <tr>
@@ -284,9 +285,9 @@
                       </tr>
                     </tbody>
                   </table>
-                </div>
+                </div> -->
                 <!--[if mso | IE]></td><td style="vertical-align:top;width:80px;" ><![endif]-->
-                <div class="mj-column-px-80 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:14.925373134328357%;">
+                <!-- <div class="mj-column-px-80 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:14.925373134328357%;">
                   <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="vertical-align:top;" width="100%">
                     <tbody>
                       <tr>
@@ -304,7 +305,7 @@
                       </tr>
                     </tbody>
                   </table>
-                </div>
+                </div> -->
                 <!--[if mso | IE]></td></tr></table><![endif]-->
               </div>
               <!--[if mso | IE]></td><td class="" style="vertical-align:top;width:536px;" ><![endif]-->
