Added booking notes

--- a/booking-confirmation-freelancer.html
+++ b/booking-confirmation-freelancer.html
@@ -671,6 +671,7 @@
                               </td>
                               <td style="padding: 12px 40px 32px 0">
                                 {{199544634__secondaryStatusFormatted}}
+                                {{199544634__note}}
                               </td>
                             </tr>
                             <tr style="border-top: 1px solid #fe5000">
@@ -685,6 +686,20 @@
                               </td>
                               <td style="padding: 12px 40px 32px 0">
                                 {{199544634__tertiaryStatusFormatted}}
+                              </td>
+                            </tr>
+                            <tr style="border-top: 1px solid #fe5000"></tr>
+                              <td
+                                style="
+                                  color: #fe5000;
+                                  padding: 12px 0 32px;
+                                  vertical-align: top;
+                                "
+                              >
+                                Booking Notes
+                              </td>
+                              <td style="padding: 12px 40px 32px 0">
+                                {{199544634__note}}
                               </td>
                             </tr>
                           </table>
