Username convention update

--- a/booking-confirmation-freelancer.html
+++ b/booking-confirmation-freelancer.html
@@ -1553,7 +1553,7 @@
                                       <tr>
                                         <td style="width: 220px">
                                           <img
-                                            src="https://bns-onoff.stg.pxlp.dev/email/logo-footer.png"
+                                            src="https://onboarding.brandnewschool.com/email/logo-footer.png"
                                             style="
                                               border: 0;
                                               display: block;
