--- a/booking-confirmation-fulltime-la.html
+++ b/booking-confirmation-fulltime-la.html
@@ -805,7 +805,7 @@
                                 Username
                               </td>
                               <td style="padding: 12px 40px 32px 0">
-                                {{201568977__bnsEmail}}
+                                {{201568976__firstName}}.{{201568976__lastName}}
                               </td>
                             </tr>
                             <tr style="border-top: 1px solid #fe5000">
