--- a/onboarding-confirmation-freelance.html
+++ b/onboarding-confirmation-freelance.html
@@ -807,7 +807,7 @@
                                 Username
                               </td>
                               <td style="padding: 12px 40px 32px 0">
-                                {{199544635__bnsEmail}}
+                                {{201568976__firstName}}.{{201568976__lastName}}
                               </td>
                             </tr>
                             <tr style="border-top: 1px solid #fe5000">
@@ -1916,7 +1916,7 @@
                                       <tr>
                                         <td style="width: 220px">
                                           <img
-                                            src="https://bns-onoff.stg.pxlp.dev/email/logo-footer.png"
+                                            src="https://onboarding.brandnewschool.com/email/logo-footer.png"
                                             style="
                                               border: 0;
                                               display: block;
