--- a/booking-confirmation-freelancer.html
+++ b/booking-confirmation-freelancer.html
@@ -673,21 +673,7 @@
                                 {{187556282__secondaryStatusFormatted}}
                               </td>
                             </tr>
-                            <tr style="border-top: 1px solid #fe5000">
-                              <td
-                                style="
-                                  color: #fe5000;
-                                  padding: 12px 0 32px;
-                                  vertical-align: top;
-                                "
-                              >
-                                2nd Hold
-                              </td>
-                              <td style="padding: 12px 40px 32px 0">
-                                {{187556282__tertiaryStatusFormatted}}
-                              </td>
-                            </tr>
-                            <tr style="border-top: 1px solid #fe5000"></tr>
+                            <!-- <tr style="border-top: 1px solid #fe5000"></tr>
                               <td
                                 style="
                                   color: #fe5000;
@@ -700,7 +686,7 @@
                               <td style="padding: 12px 40px 32px 0">
                                 {{187556282__note}}
                               </td>
-                            </tr>
+                            </tr> -->
                           </table>
                         </td>
                       </tr>
@@ -1374,9 +1360,9 @@
                                   style="
                                     width: 12px;
                                     height: 12px;
-                                    margin-left: 8px;
+                                    margin: 0 4px;
                                   "
-                                  src="https://bns-onoff.stg.pxlp.dev/email/icon-arrow-angle.png"
+                                  src="https://onboarding.brandnewschool.com/email/icon-arrow-angle.png"
                                 />
                               </td>
                             </tr>
