--- a/onboarding-fulltime.html
+++ b/onboarding-fulltime.html
@@ -324,7 +324,7 @@
                           </tr>
                           <tr style="border-top: 1px solid #fe5000">
                             <td style="color: #fe5000; padding: 12px 0; vertical-align: top"> Accessing<br /> Slack and Notion </td>
-                            <td style="padding: 12px 40px 32px 0"> We use <a href="https://join.slack.com/t/brandnewschool" style="color: #000 !important">Slack</a>
+                            <td style="padding: 12px 40px 32px 0"> We use <a href="https://brandnewschool.slack.com/join/signup#/domain-signup" target="_blank" style="color: #000 !important">Slack</a>
                               <img style="width: 12px; height: 12px; margin: 0 4px" src="https://onboarding.brandnewschool.com/email/icon-arrow-angle.png" /> for project and company communication and <a href="https://www.notion.so/brandnewschool" style="color: #000 !important">Notion</a>
                               <img style="width: 12px; height: 12px; margin: 0 4px" src="https://onboarding.brandnewschool.com/email/icon-arrow-angle.png" /> for general company and department information. To sign into both, select Continue with Google and use your BNS email address.
                             </td>
