--- a/booking-confirmation-fulltime-ny.html
+++ b/booking-confirmation-fulltime-ny.html
@@ -723,7 +723,7 @@
                                 <tr>
                                   <td style="width: 48px">
                                     <img
-                                      src="https://onboarding.brandnewschool.com/email/icon-pens.png"
+                                      src="https://onboarding.brandnewschool.com/email/lucid.png"
                                       style="
                                         border: 0;
                                         display: block;
@@ -1118,7 +1118,7 @@
                               <td style="padding: 12px 0; vertical-align: top">
                                 <a
                                   style="color: #000 !important"
-                                  href="https://www.notion.so/brandnewschool/Instructions-5776c41b2b3644299d8623343c5974f4"
+                                  href="https://www.notion.so/brandnewschool/Teradici-593c556a56cc4095ac1488587048b59b?pvs=4"
                                   >Remote Workstation Instructions</a
                                 >
                                 <img
@@ -1375,7 +1375,7 @@
 
                                 <br /><br />
                                 Monday 10:00 – 10:25 AM<br />
-                                <a style="color: #000 !important" href="">
+                                <a style="color: #000 !important" href="https://meet.google.com/amr-qzoj-qpq" target="_blank">
                                   Video Call Link
                                 </a>
                                 <img
