--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <title>BNS Emails</title>
 </head>
 <body>
-    <!-- <a href="tester.html">Test Emails</a><br> -->
+    <!-- Freelancer 1099 is most updated zap -->
     <a href="onboarding-confirmation-freelance.html">Onboarding Confirmation Freelance</a><br>
     <a href="booking-confirmation-freelancer.html">Booking Confirmation Freelance</a> <br>
     <br>
     <a href="onboarding-fulltime.html">Onboarding Fulltime</a> <br>
     <a href="booking-confirmation-fulltime-ny.html">Booking Confirmation Fulltime NY</a> <br>
     <a href="booking-confirmation-fulltime-la.html">Booking Confirmation Fulltime LA</a><br>
+    <br>
+    <a href="tester.html">Tester</a><br>
 </body>
 </html>
