--- a/onboarding-confirmation-freelance.html
+++ b/onboarding-confirmation-freelance.html
@@ -725,7 +725,7 @@
                                 <tr>
                                   <td style="width: 48px">
                                     <img
-                                      src="https://onboarding.brandnewschool.com/email/icon-pens.png"
+                                      src="https://onboarding.brandnewschool.com/email/lucid.png"
                                       style="
                                         border: 0;
                                         display: block;
