--- a/booking-confirmation-freelancer.html
+++ b/booking-confirmation-freelancer.html
@@ -1,3 +1,4 @@
+<!-- Booking Confirmation Freelancer -->
 <!DOCTYPE html>
 <html
   xmlns="http://www.w3.org/1999/xhtml"
@@ -260,7 +261,7 @@
                               color: #000000;
                             "
                           >
-                            {{187556282__firstName}}{{187556282__lastName}}
+                            {{187556282__firstName}} {{187556282__lastName}}
                           </div>
                         </td>
                       </tr>
